chrome/browser.css
.browserContainer, .browser-toolbox-background {
  background: var(--tf-bg) !important;
}

browser {
  border-radius: var(--tf-rounding);
}

#tabbrowser-tabbox {
  margin: 8px !important;
  border: var(--border-width) solid var(--tf-border);
  border-radius: var(--tf-rounding);
  padding: 8px !important;
  transition: border-color var(--tf-border-transition);
  &:hover {
    border-color: var(--tf-accent) !important;
    &::before {
      color: var(--tf-accent);
    }
  }
  &::before {
    display: var(--tf-display-titles);
    content: "main";
    background-color: var(--tf-bg);
    position: absolute;
    margin: -1.75rem 0rem;
    padding: 0 4px;
  }
}

:root[inFullscreen="true"] {
  #tabbrowser-tabbox {
    margin: 0 !important;
    border: none;
    padding: 0 !important;
    transition: none;
    &::before {
      display: none;
    }
  }
}

#browser:not(.browser-toolbox-background) {
  :root[lwtheme] & {
    background-color: var(--lwt-accent-color) !important;
    background-image: var(--lwt-accent-color) !important;
  }
}

